Changed CMakeLists and main.cpp

--- a/src/Book/CMakeLists.txt
+++ b/src/Book/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(Book
     src/Book.hpp
     src/Book.cpp
+    src/Novel.hpp
+    src/Novel.cpp
 )
 
 target_link_libraries(Book PRIVATE Person)
