--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ add_subdirectory(src)
 
 add_executable("${PROJECT_NAME}" main.cpp)
 
-target_link_libraries("${PROJECT_NAME}" PRIVATE Person Book Library)
+target_link_libraries("${PROJECT_NAME}" PRIVATE Person Book Library Lock)
