--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 set(myproject "Proiect-IEP")
 
+set(CMAKE_CXX_FLAGS "-pthread")
+
 project(${myproject})
 
 add_subdirectory(src)
